# bt-fy

./: Cargo.toml  HARDWARE_STATUS.md  I2C_DIAGNOSTIC_GUIDE.md  README.md  build.rs  report.md  sdkconfig.defaults
doc/: bf.pen
flutter_app/: README.md  pubspec.yaml  run.bat  run_android.ps1
flutter_app/android/: .gitignore  gradle.properties
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/butterfly/flutter_app/: MainActivity.kt
flutter_app/lib/: main.dart
flutter_app/lib/constants/: protocol.dart
flutter_app/lib/l10n/: app_localizations.dart  strings.dart
flutter_app/lib/models/: device.dart  wifi_network.dart
flutter_app/lib/repositories/: home_devices_repository.dart
flutter_app/lib/screens/: add_device_screen.dart  device_detail_screen.dart  device_info_screen.dart  home_screen.dart  wifi_manage_screen.dart
flutter_app/lib/services/: device_discovery_service.dart  device_provisioning_service.dart  device_storage_service.dart  discovered_devices_store.dart  pending_bind_store.dart  phone_identity_service.dart  wifi_storage_service.dart
flutter_app/lib/viewmodels/: home_view_model.dart
flutter_app/lib/widgets/: pair_request_watcher.dart
src/: main.rs
src/dns/: mod.rs  server.rs  simple.rs
src/hardware/: continuous_servo.rs  mod.rs  motor.rs  servo.rs  vl53l0x.rs  vl53l1x.rs
src/protocol/: ap_tcp.rs  mod.rs  sta_services.rs
src/system/: config.rs  mod.rs
src/web/: captive.rs  dashboard.html  debug.html  mod.rs  server.rs  welcome.html
src/wifi/: config.rs  mod.rs  softap.rs
