[package]
name = "bt-fy"
version = "0.1.0"
authors = ["iiishop <30495867+iiishop@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "bt-fy"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.dev]
opt-level = "z"          # 最大化体积优化
debug = false            # 禁用调试信息
strip = true             # 剥离符号
lto = true               # 完整LTO
codegen-units = 1        # 单个代码生成单元以获得更好的优化
panic = "abort"          # 使用abort而不是unwind

[profile.release]
opt-level = "z"          # 最大化体积优化
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = "0.45"
heapless = "0.8"
anyhow = "1.0"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"

